// ability.go — 塔能力系统核心。
// 定义能力接口、命中效果结构体、全局能力注册表。
// 具体能力实现在 abilities/ 子包中通过 init() 自注册。
package tower

import (
	"defense2/internal/core/enemy"
	"defense2/internal/core/projectile"
)

// HitResult 描述弹射物命中时触发的能力效果。
type HitResult struct {
	BonusDamage float64      // 额外伤害
	Splash      *SplashEffect // 溅射效果（可选）
	Slow        *SlowEffect   // 减速效果（可选）
	Stun        *StunEffect   // 眩晕效果（可选）
	Bleed       *BleedEffect  // 流血效果（可选）
	Bounce      *BounceEffect // 弹射效果（可选）
	IsCrit      bool          // 是否暴击
}

// SplashEffect 范围溅射伤害。
type SplashEffect struct {
	Radius float64 // 溅射半径（像素）
	Ratio  float64 // 伤害比例（相对弹射物伤害，0.4 = 40%）
}

// SlowEffect 减速效果。
type SlowEffect struct {
	Factor   float64 // 速度倍率（0.5 表示减至 50% 速度）
	Duration float64 // 持续时间（秒）
}

// StunEffect 眩晕效果（冻结敌人移动）。
type StunEffect struct {
	Duration float64 // 持续时间（秒）
}

// BleedEffect 持续流血伤害。
type BleedEffect struct {
	DPS      float64 // 每秒伤害
	Duration float64 // 持续时间（秒）
}

// BounceEffect 弹射链效果（弹射物跳跃到附近敌人）。
type BounceEffect struct {
	MaxBounces  int     // 最大弹射次数
	Range       float64 // 弹射搜索范围（像素）
	DamageDecay float64 // 每次弹射的伤害衰减比例
}

// Ability 塔能力接口。
type Ability interface {
	// Name 返回能力唯一标识符。
	Name() string
	// OnHit 在弹射物命中敌人时调用，返回触发的效果（无效果返回 nil）。
	OnHit(t *Tower, p *projectile.Projectile, e *enemy.Enemy) *HitResult
}

// Registry 全局能力注册表（能力名 → 能力实例）。
var Registry = map[string]Ability{}

// Register 向全局注册表添加一个能力。
func Register(a Ability) {
	Registry[a.Name()] = a
}

// TowerAbility 塔与能力的绑定关系，支持自定义参数。
type TowerAbility struct {
	Name   string             `json:"name"`             // 能力名称
	Params map[string]float64 `json:"params,omitempty"` // 自定义参数（可选）
}
