@startuml
namespace config {
    class "MapConfig" << (S,Aquamarine) >> {
        + ID string
        + Name string
        + Cols int
        + Rows int
        + CellSize int
        + Theme string
        + Waves int
        + Difficulty string
        + Grid [][]int
        + PathOrder [][]int
        + Entries []MapEntry
        + PathOrders <font color=blue>map</font>[string][][]int

    }
    class "MapEntry" << (S,Aquamarine) >> {
        + ID string
        + Cell []int
        + Weight float64

    }
}
namespace economy {
    class "Config" << (S,Aquamarine) >> {
        + KillReward int
        + WaveBonus int
        + WaveBonusScale int
        + InterestRate float64
        + InterestCap int
        + SellRefundRatio float64

        + KillGold() int
        + WaveCompleteGold(wave int) int
        + InterestGold(currentGold int) int
        + SellRefund(cost int) int

    }
}
namespace enemy {
    class "Enemy" << (S,Aquamarine) >> {
        + X float64
        + HP float64
        + MaxHP float64
        + Speed float64
        + BaseSpeed float64
        + Radius float64
        + PathIndex int
        + ReachedEnd bool
        + Active bool
        + StunTimer float64
        + SlowTimer float64
        + SlowFactor float64
        + BleedTimer float64
        + BleedDPS float64

    }
    class "Pool" << (S,Aquamarine) >> {
        - enemies []Enemy

        + Count int

        + Spawn(x float64, y float64, hp float64, speed float64, radius float64, pathIndex int) *Enemy
        + Kill(e *Enemy) 
        + Each(fn <font color=blue>func</font>(*Enemy) ) 
        + ClearAll() 

    }
    class "Spawner" << (S,Aquamarine) >> {
        + Wave int
        + MaxWaves int
        + SpawnTimer float64
        + SpawnIndex int
        + EnemiesPerWave int
        + SpawnInterval float64
        + WaveInterval float64
        + WaveTimer float64
        + WaveActive bool
        + AllDone bool
        + Waypoints []gamemap.Point

        - enemyCount() int

        + Update(pool *Pool, dt float64) 
        + IsClear(pool *Pool) bool

    }
}
namespace game {
}
namespace gamemap {
    class "GameMap" << (S,Aquamarine) >> {
        + Config *config.MapConfig
        + Waypoints []Point
        + CellSize int
        + OffsetX float64
        + OffsetY float64

        - pathToPixels(path [][]int) []Point

        + CellAt(x float64, y float64) int
        + CellCenter(row int, col int) Point
        + PixelWidth() float64
        + PixelHeight() float64

    }
    class "Point" << (S,Aquamarine) >> {
        + X float64

    }
}
namespace pipeline {
}
namespace projectile {
    class "Pool" << (S,Aquamarine) >> {
        - projectiles []Projectile
        - cursor int

        + Count int

        + Fire(sx float64, sy float64, tx float64, ty float64, damage float64, speed float64, radius float64) 
        + Update(dt float64) 
        + Each(fn <font color=blue>func</font>(*Projectile) ) 
        + Release(proj *Projectile) 
        + ClearAll() 

    }
    class "Projectile" << (S,Aquamarine) >> {
        + X float64
        + VX float64
        + Damage float64
        + Radius float64
        + Speed float64
        + Active bool
        + Life float64
        + MaxLife float64

    }
}
namespace tower {
    interface "Ability"  {
        + Name() string
        + OnHit(t *Tower, p *projectile.Projectile, e *enemy.Enemy) *HitResult

    }
    class "BleedEffect" << (S,Aquamarine) >> {
        + DPS float64
        + Duration float64

    }
    class "BounceEffect" << (S,Aquamarine) >> {
        + MaxBounces int
        + Range float64
        + DamageDecay float64

    }
    class "HitResult" << (S,Aquamarine) >> {
        + BonusDamage float64
        + Splash *SplashEffect
        + Slow *SlowEffect
        + Stun *StunEffect
        + Bleed *BleedEffect
        + Bounce *BounceEffect
        + IsCrit bool

    }
    class "Pool" << (S,Aquamarine) >> {
        - towers []Tower

        + Count int

        + Place(row int, col int, cx float64, cy float64, def TowerDef) *Tower
        + Remove(t *Tower) 
        + Each(fn <font color=blue>func</font>(*Tower) ) 
        + At(row int, col int) *Tower

    }
    class "SlowEffect" << (S,Aquamarine) >> {
        + Factor float64
        + Duration float64

    }
    class "SplashEffect" << (S,Aquamarine) >> {
        + Radius float64
        + Ratio float64

    }
    class "StunEffect" << (S,Aquamarine) >> {
        + Duration float64

    }
    class "Tower" << (S,Aquamarine) >> {
        + X float64
        + Row int
        + Range float64
        + Damage float64
        + AttackSpeed float64
        + FireTimer float64
        + Cost int
        + Key string
        + Label string
        + Active bool
        + Abilities []string
        + Color []uint8

    }
    class "TowerAbility" << (S,Aquamarine) >> {
        + Name string
        + Params <font color=blue>map</font>[string]float64

    }
    class "TowerDef" << (S,Aquamarine) >> {
        + Key string
        + Label string
        + Range float64
        + Damage float64
        + AttackSpeed float64
        + Cost int
        + Abilities []string
        + Color []uint8

    }
    namespace abilities {
    class "BleedDotAbility" << (S,Aquamarine) >> {
        + Name() string
        + OnHit(_ *tower.Tower, _ *projectile.Projectile, _ *enemy.Enemy) *tower.HitResult

    }
    class "CritAbility" << (S,Aquamarine) >> {
        + Name() string
        + OnHit(_ *tower.Tower, p *projectile.Projectile, _ *enemy.Enemy) *tower.HitResult

    }
    class "OnHitSlowAbility" << (S,Aquamarine) >> {
        + Name() string
        + OnHit(_ *tower.Tower, _ *projectile.Projectile, _ *enemy.Enemy) *tower.HitResult

    }
    class "SplashAbility" << (S,Aquamarine) >> {
        + Name() string
        + OnHit(_ *tower.Tower, _ *projectile.Projectile, _ *enemy.Enemy) *tower.HitResult

    }
    }
}
namespace hud {
    class "BuildMenuData" << (S,Aquamarine) >> {
        + TowerDefs []tower.TowerDef
        + SelectedIdx int
        + Gold int

    }
    class "TopBarData" << (S,Aquamarine) >> {
        + Gold int
        + Lives int
        + Wave int
        + MaxWaves int
        + Kills int
        + Enemies int

    }
}
namespace render {
}
namespace scene {
    class "Game" << (S,Aquamarine) >> {
        - current Scene
        - next Scene
        - width int
        - height int

        + SwitchScene(next Scene) 
        + Update() error
        + Draw(screen *ebiten.Image) 
        + Layout(_ int, _ int) (int, int)

    }
    interface "Scene"  {
        + Update() error
        + Draw(screen *ebiten.Image) 

    }
    class "StageScene" << (S,Aquamarine) >> {
        - switcher Switcher
        - frame int
        - state stageState
        - gameMap *gamemap.GameMap
        - enemies *enemy.Pool
        - spawner *enemy.Spawner
        - towers *tower.Pool
        - projectiles *projectile.Pool
        - econ economy.Config
        - lives int
        - gold int
        - kills int
        - towerDefs []tower.TowerDef
        - selectedDef int
        - hoveredTower *tower.Tower
        - lastWave int
        - notification string
        - notifyTimer float64

        - handleInput() 
        - updateHoveredTower(px float64, py float64) 
        - tryPlaceTower(px float64, py float64) 
        - trySellTower(px float64, py float64) 
        - showNotify(msg string) 
        - updatePlaying() 

        + Update() error
        + Draw(screen *ebiten.Image) 

    }
    interface "Switcher"  {
        + SwitchScene(next Scene) 

    }
    class "TitleScene" << (S,Aquamarine) >> {
        - switcher Switcher

        + Update() error
        + Draw(screen *ebiten.Image) 

    }
    class "scene.stageState" << (T, #FF7700) >>  {
    }
}
"__builtin__.int" #.. "scene.stageState"

"scene.Scene" <|-- "scene.Game"
"scene.Switcher" <|-- "scene.Game"
"scene.Scene" <|-- "scene.StageScene"
"scene.Scene" <|-- "scene.TitleScene"


@enduml
